--- a/app/src/main/res/layout/atv_main.xml
+++ b/app/src/main/res/layout/atv_main.xml
@@ -21,7 +21,7 @@
             android:layout_marginRight="12dp"
             android:text="@string/no_recent_repositories"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="#1e2327"
+            android:textColor="@color/githubBlack"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
