--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="githubBlue">#0363d1</color>
     <color name="githubBlack">#1e2327</color>
+    <color name="gray">#717171</color>
 </resources>
